proj1/test/test_11811806_4.out
Error type A at Line 2: unknown lexeme ~
Error type B at Line 3: Missing semicolon';'
Error type B at Line 10: Missing semicolon ';'
