proj1/test/test_11811806_4.spl
struct foo1 {
    int attr = ~;
} s1, s2[3]

int f002() {
    return 0;
}

int test_() {
    int a = f002);
    return 0;
}